refactored and fixed issues

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -5,8 +5,8 @@ serverurl=unix:///tmp/supervisor.sock
 file = /tmp/supervisor.sock
 chmod = 0777
 chown = nobody:nobody
-;username = plusamp
-;password = plusamp123
+;username = user
+;password = password
 
 [supervisord]
 ;logfile=/var/log/supervisor/supervisord-nobody.log  ; (main log file;default $CWD/supervisord.log)
