--- a/php.d/xdebug.ini
+++ b/php.d/xdebug.ini
@@ -4,7 +4,7 @@ xdebug.collect_assignments = 1
 xdebug.collect_params = 5
 xdebug.collect_return = 1
 xdebug.halt_level=E_WARNING|E_NOTICE|E_USER_WARNING|E_USER_NOTICE
-xdebug.idekey=plusamp
+xdebug.idekey=theidekey
 xdebug.remote_autostart = 0
 xdebug.remote_enable = 1
 ;xdebug.remote_host=zeus.local
